decafcomp/llvm/test/gcd2.llvm.bc.err
/opt/local/libexec/llvm-3.8/bin/llvm-as: llvm/test/gcd2.llvm:31:7: error: value doesn't match function result type 'i1'
  ret i32 %ld_a
      ^
